syntax = "proto3";

option csharp_namespace = "Onboarding.Zeth.Poc.API.Protos";

service OnboardProtoService{
	rpc OnboardCustomer(OnboardRequest) returns (OnboardResponse);
}

message OnboardRequest{
	string RIN = 1;
	string Email = 2;
	string Token = 3;
	
}


message GetFeedbackResponse{
	string Result = 1;
	
}

enum Status{
	INPROGRESS = 0;
	COMPLETED = 1;
}

message Department{
	string Id = 1;
	string Name = 2;
	string Description = 3;
}
							
message DepartmentConfig{
	string Id = 1;
	string DepartmentId = 2;
	repeated string Configuration = 3;
}


message OnboardResponse{
	string RIN = 1;
	string Email = 2;
	repeated Department department = 3;
	repeated DepartmentConfig config = 4;
	
}

message GetFeedbackRequest{
	string CustomerId = 1;
	
}